sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:19: error: not found: value ap_rouge
      ap_rouge += -1;
      ^